font fixed, overflow fixed

--- a/style.css
+++ b/style.css
@@ -742,7 +742,6 @@ ul {
 @media only screen and (max-width: 480px) {
 	* {
 		max-width: 100vw !important;
-		overflow-x: hidden;
 	}
 
 	body {
